test/good/classes/method13.px

class A def
    func f(): A*(Bool*Char?) def
        skip

print A().f().b
