test/bad/generators/void02.px

func f(): Int?... def
    yield

f()
